[package]
name = "rust-redis-pubsub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "*", features = ["full"] }
redis = "*"
uuid = { version = "0.8.2", features = ["v4"] }
serde_json = "*"
serde = {version = "*", features = ["derive"]}